
[tool.poetry]
name = "epa"
version = "0.1.0"
description = ""
authors = ["Ethan <ethan.cychen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
line-bot-sdk = "^1.19.0"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-Mail = "^0.9.1"
Flask-Migrate = "^3.0.1"
Flask-Login = "^0.5.0"
Flask-WTF = "^0.15.1"
email-validator = "^1.1.3"
PyJWT = "^2.1.0"
zappa = "^0.52.0"
psycopg2-binary = "2.8.6"
numpy = "1.19.0"
pandas = "1.2.4"

[tool.poetry.dev-dependencies]
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
